--- a/index.HTML
+++ b/index.HTML
@@ -35,7 +35,7 @@
             <h1 class="text">
               <strong>Hi, my name is Théo</strong>
             </h1>
-            <img class="idi" src="tdp/img-00.png" alt="">
+            <img class="idi" src="images/CNN_image_mbappe_foden.jpg" alt="">
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text mb-5">Data Scientist Intern at Hupi<br>INSA Rennes - Mathématiques Appliquées</br></br><strong><strong>Education</strong></strong> // INSA Rennes - Applied Mathematics
@@ -61,7 +61,7 @@
           <div class="row no-gutters popup-gallery">
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-01.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -81,7 +81,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-02.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -101,7 +101,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-03.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -130,7 +130,7 @@
 			
               <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box">
-                  <img class="img-fluid" src="tdp/img-04.jpg" alt="">
+                  <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
@@ -205,7 +205,7 @@
 			  
               <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box">
-                  <img class="img-fluid" src="tdp/img-05.jpg" alt="">
+                  <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
@@ -225,7 +225,7 @@
               </div>
               <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box">
-                  <img class="img-fluid" src="tdp/img-06.jpg" alt="">
+                  <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
@@ -251,7 +251,7 @@
 			  
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-07.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpgg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -310,7 +310,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-08.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -329,7 +329,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <div class="portfolio-box">
-                <img class="img-fluid" src="tdp/img-09.jpg" alt="">
+                <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -376,7 +376,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box">
-                    <img class="img-fluid" src="tdp/img-11.jpg" alt="">
+                    <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <div class="project-category text-faded">
@@ -394,7 +394,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="portfolio-box">
-                    <img class="img-fluid" src="tdp/img-12.jpg" alt="">
+                    <img class="img-fluid" src="images/CNN_image_mbappe_foden.jpg" alt="">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <div class="project-category text-faded">
